Unscrollable overflow on section interface fix.

--- a/web/css/brokenbooks.css
+++ b/web/css/brokenbooks.css
@@ -329,10 +329,11 @@ and open the template in the editor.
                 width: 107%;
                 text-align: left;
                 margin: 8px 0px;
-                overflow-y: auto;
+                overflow-x: auto;
                 left: -22px;
                 border-top: 1px solid black;
                 padding-top: 5px;
+                white-space: nowrap;
             }
             .helperIcon{
                 cursor: help;
